<resources>
    <string name="app_name">Login7up</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Acceder</string>
    <string name="registrarse">Registrarse</string>
    <string name="editTextHome">Soy la mascota de la bebida 7up, me conocen como FIDO DIDO. Es un gusto que hayas entrado a mi aplicación, espero que te sientas comodo ahi. Puedes visitar el MENU que esta arriba a la derecha de la pantalla."</string>








   <string name="title_activity_bebidass" translatable="false">BebidassActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="editTextBebidas">ENCERIO TE CREISTE QUE TENIAMOS BEBIDAS? TE FUISTE RE BAITEADO MASTER</string>
    <string name="editTextBebidas2">Na mentira, no tenemos stock xd</string>
    <string name="editTextNosotros">En 7UP, estamos orgullosos de ser una de las marcas más icónicas y reconocidas en la industria de las bebidas refrescantes. Desde nuestros humildes comienzos hasta convertirnos en un líder global, hemos dejado una huella refrescante en la vida de millones de personas en todo el mundo.</string>
    <string name="editTextNosotros2">Nuestra historia comenzó en 1929, cuando Charles Leiper Grigg introdujo al mundo una bebida gaseosa única y revolucionaria: 7UP. Desde entonces, nos hemos destacado por ofrecer un sabor refrescante, burbujeante y único que ha deleitado a las generaciones durante más de 90 años.</string>
    <string name="editTextNosotros3">Charles L. Grigg, creador de 7up.</string>
    <string name="editTextNosotros4">Nuestro equipo está conformado por individuos apasionados y creativos que comparten un objetivo común: ofrecer a nuestros consumidores la mejor experiencia de bebida refrescante posible.</string>
    <string name="editTextNosotros5">Gracias por elegir 7UP. Estamos emocionados de seguir refrescando el mundo y compartiendo momentos inolvidables junto a ti. Únete a nosotros en esta deliciosa aventura mientras continuamos evolucionando y brindando el sabor que tanto te gusta.  ¡Refresca tu día con 7UP!</string>
    <string name="editTextInformacion">Informacion del Programador</string>
    <string name="editTextInformacion2">Telefono</string>
    <string name="editTextInformacion3">Email</string>
    <string name="editTextInformacion4">Nombre: Vargas, Joaquin Leon</string>
    <string name="editTextInformacion5">¡Si tienes alguna pregunta, CONTÁCTANOS!</string>
    <string name="editTextInformacion6">GitHub</string>
    <string name="editTextMenu">Bebidas</string>
    <string name="editTextMenu2">Sobre nuestra empresa</string>
    <string name="editTextMenu3">Acerca del programador</string>
    <string name="editTextMenu4">Cerrar sesion</string>
    <string name="editTextAcceso">ACCESO CORRECTO</string>
    <string name="editTextAcceso2">"Datos Invalidos. Numero de intentos: "</string>
    <string name="editTextAcceso3">Espere 10 segundos para intentarlo de nuevo, por favor</string>
    <string name="editTextAcceso4">Datos invalidos, has gastado tus 3 intentos.</string>
    <string name="imagenNosotros">¿Quienes somos?</string>
</resources>
