<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="40"
        android:padding="10dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/black"
        android:layout_marginBottom="15dp"
        android:layout_weight="5"
        android:background="@drawable/edt_style"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"

        android:layout_weight="5"
        android:background="@drawable/edt_style"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/black"


        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="6"
        android:background="@drawable/btn_style"
        android:text="@string/ingresar" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:autoText="false"
        android:gravity="center"
        android:text="@string/registrarse"
        android:textColor="@color/white"
        tools:text="REGISTRARSE" />


</LinearLayout>